# topology-radiomics

./: .buildinfo  LICENSE  README.md  genindex.html  index.html  index.md  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.py
.env-scripts/: dev_requirements.txt  setup.bat  setup.sh
.github/workflows/: pypi-publish.yml  python-package.yml  testpypi-publish.yml
docker/: docker-compose.yml  notebook.dockerfile
docs/: classes.html  docker.md  sphinx.md  sphnix.md  topology_radiomics.html
morphlogy/: notes.py  setup.py  shapes.md
morphology/: __init__.py  morphology_features.py  reporting.py  utils.py
notebooks/: Nifit_conversion_analysis.ipynb  Surface Measure Visualization - pyvista and itkwidgets.ipynb  Surface Measure Visualization - pyvista polydata and itkwidgets.ipynb  Tutorial - Getting started with topoplogy_radiomics.ipynb  Tutorial - Using bric-radiomics to visualize features.ipynb  Tutorial - Working with medpy and bric_radiomics.ipynb  Tutorial - Working with medpy and topology_radiomics.ipynb  graphs_testing.ipynb  itkwidgets_testing.ipynb  nibabel and nilearn testing.ipynb
slicer/topologyradiomics/: CMakeLists.txt  README.md
slicer/topologyradiomics/TopologyRadiomicsSlicer/: CMakeLists.txt  TopologyRadiomicsSlicer.py
slicer/topologyradiomics/TopologyRadiomicsSlicer/Resources/UI/: TopologyRadiomicsSlicer.ui
src/: MANIFEST.in  setup.py
src/bric_radiomics/: __init__.py  config.py  morphology_features.py  sanitization.py
src/docs/source/: bric_radiomics.rst  classes.rst  conf.py  index.rst  modules.rst  morphology.rst  topology_radiomics.rst
src/morphology/: MANIFEST.in  __init__.py  config.py  morphology_features.py  sanitization.py  setup.py
src/topology_radiomics/: __init__.py  morphology_features.py  sanitization.py
studies/1/: CompCurvature.m  SurfacePts.m  main.m  measures  measures.mat  measures_Lesion_Unnorm_res.mat  nifiti_to_mat6.m  nii2mat.m  outliers.m  outliers1.m  surface_pts_test.m
